--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,24 +1,3 @@
 <app-cabecalho></app-cabecalho>
-<app-barra-lateral></app-barra-lateral> 
-
-<h1 [textContent]="titulo"></h1>
-<label for="">Codigo: </label>
-<input type="text" [(ngModel)]="textoCodigo"><br>
-<label for="">Nome: </label>
-<input type="text" [(ngModel)]="textoNome"><br>
-<label for="">Telefone: </label>
-<input type="text" [(ngModel)]="textoTelefone">
-
-<label for="">Data de Nascimento: </label>
-<input type="text" [(ngModel)]="textoDataNascimento"><br>
-<label for="">Endereço: </label>
-<input type="text" [(ngModel)]="textoEndereco"><br>
-<label for="">Bairro: </label>
-<input type="text" [(ngModel)]="textoBairro">
-
-<label for="">Cidade: </label>
-<input type="text" [(ngModel)]="textoCidade"><br>
-<label for="">Estado: </label>
-<input type="text" [(ngModel)]="textoEstado"><br>
-<br><br>
-<button (click)="imprimir()">Imprimir</button>
+<app-barra-lateral></app-barra-lateral>
+<ng-content></ng-content>
