--- a/src/app/pessoa/pessoa.component.html
+++ b/src/app/pessoa/pessoa.component.html
@@ -8,25 +8,44 @@
         <input type="text" [(ngModel)]="pessoa.telefone" name="telefone">
 
         <label for="">Data de Nascimento: </label>
-        <input type="text" [(ngModel)]="pessoa.dataNascimento" name="nascimento"><br>
+        <input type="date" [(ngModel)]="pessoa.dataNascimento" name="nascimento"><br>
         <label for="">Endereço: </label>
-        <input type="text" [(ngModel)]="pessoa.endereco" name="endereco"><br>
+        <input type="text" [(ngModel)]="pessoa.endereco" name="endereco">
+        <br>
+        <label for="">Estado: </label>        
+        <select [(ngModel)]="pessoa.estado" (ngModelChange)="carregarCidade()">
+                <option *ngFor="let estado of listaEstados" [ngValue]="estado">{{ estado }}</option>
+        </select>
+        <br>
+        <label for="">Cidade: </label>
+        <select [(ngModel)]="pessoa.cidade">
+                <option *ngFor="let cidade of listaMunicipios" [ngValue]="cidade.cidade ">{{ cidade.cidade }}</option>
+                
+        </select>
+        <br>
         <label for="">Bairro: </label>
         <input type="text" [(ngModel)]="pessoa.bairro" name="bairro">
-
-        <label for="">Cidade: </label>
-        <input type="text" [(ngModel)]="pessoa.cidade" name="cidade"><br>
-        <label for="">Estado: </label>
-        <input type="text" [(ngModel)]="pessoa.estado" name="estado"><br>
+        <br>
         <label for="">Está ativo? </label>
         <br>
         <input type="radio" [(ngModel)]="pessoa.isAtivo" name="ativo" [value]="true">Sim<br>
         <input type="radio" [(ngModel)]="pessoa.isAtivo" name="ativo" [value]="false">Não<br>
         <br><br>
         <button (click)="incluirPessoa()">Incluir Pessoa</button>
-        <button (click)="editarPessoa()">Editar Pessoa</button>
+        <!-- <button (click)="editarPessoa()">Editar Pessoa</button> -->
         <!-- <button class="btn btn-success" (click)="imprimir()" type="submit">OK</button> -->
         <br><br>
+
+        <!-- <table>
+                <tr>
+                        <th>Codigo</th>
+                        <th>Cidade</th>
+                </tr>
+                <tr *ngFor="let cidade of listaMunicipios">
+                        <td *ngIf="cidade.codigo=='03'">{{ cidade.codigo }}{{ cidade.cidade }}</td>
+                 <td>{{ cidade.codigo }}{{ cidade.cidade }}</td> -->
+                <!-- </tr> -->
+        <!-- </table> -->
         <table border="1">
                 <tr>
                         <th>Codigo</th>
@@ -37,17 +56,19 @@
                         <th>Cidade</th>
                         <th>Estado</th>
                         <th>Está ativo?</th>
+                        <th>Ações</th>
                 </tr>
                 <tr *ngFor="let pessoa of listaPessoas">
                         <td>{{ pessoa.codigo }}</td>
                         <td>{{ pessoa.nome }}</td>
                         <td>{{ pessoa.telefone }}</td>
-                        <td>{{ pessoa.dataNascimento }}</td>
+                        <td>{{ pessoa.dataNascimento | date:'dd/MM/yyyy' }}</td>
                         <td>{{ pessoa.endereco }}</td>
                         <td>{{ pessoa.cidade }}</td>
                         <td>{{ pessoa.estado }}</td>
                         <td *ngIf="pessoa.isAtivo">Sim</td>
                         <td *ngIf="!pessoa.isAtivo">Não</td>
+                        <td><button (click)="removerPessoa(pessoa)">Excluir</button></td>
 
                 </tr>
         </table>
