--- a/src/app/pessoa/pessoa.component.html
+++ b/src/app/pessoa/pessoa.component.html
@@ -1,51 +1,5 @@
 <app-layout>
-        <h1 [textContent]="titulo"></h1>
-        <label for="">Codigo: </label>
-        <input type="text" [(ngModel)]="pessoa.codigo" name="codigo"><br>
-        <label for="">Nome: </label>
-        <input type="text" [(ngModel)]="pessoa.nome" name="nome"><br>
-        <label for="">Telefone: </label>
-        <input type="text" [(ngModel)]="pessoa.telefone" name="telefone">
-
-        <label for="">Data de Nascimento: </label>
-        <input type="date" [(ngModel)]="pessoa.dataNascimento" name="nascimento"><br>
-        <label for="">Endereço: </label>
-        <input type="text" [(ngModel)]="pessoa.endereco" name="endereco">
-        <br>
-        <label for="">Estado: </label>        
-        <select [(ngModel)]="pessoa.estado" (ngModelChange)="carregarCidade()">
-                <option *ngFor="let estado of listaEstados" [ngValue]="estado">{{ estado }}</option>
-        </select>
-        <br>
-        <label for="">Cidade: </label>
-        <select [(ngModel)]="pessoa.cidade">
-                <option *ngFor="let cidade of listaMunicipios" [ngValue]="cidade.cidade ">{{ cidade.cidade }}</option>
-                
-        </select>
-        <br>
-        <label for="">Bairro: </label>
-        <input type="text" [(ngModel)]="pessoa.bairro" name="bairro">
-        <br>
-        <label for="">Está ativo? </label>
-        <br>
-        <input type="radio" [(ngModel)]="pessoa.isAtivo" name="ativo" [value]="true">Sim<br>
-        <input type="radio" [(ngModel)]="pessoa.isAtivo" name="ativo" [value]="false">Não<br>
-        <br><br>
-        <button (click)="incluirPessoa()">Incluir Pessoa</button>
-        <!-- <button (click)="editarPessoa()">Editar Pessoa</button> -->
-        <!-- <button class="btn btn-success" (click)="imprimir()" type="submit">OK</button> -->
-        <br><br>
-
-        <!-- <table>
-                <tr>
-                        <th>Codigo</th>
-                        <th>Cidade</th>
-                </tr>
-                <tr *ngFor="let cidade of listaMunicipios">
-                        <td *ngIf="cidade.codigo=='03'">{{ cidade.codigo }}{{ cidade.cidade }}</td>
-                 <td>{{ cidade.codigo }}{{ cidade.cidade }}</td> -->
-                <!-- </tr> -->
-        <!-- </table> -->
+        <h5>Tabela de Pessoas</h5>
         <table border="1">
                 <tr>
                         <th>Codigo</th>
@@ -53,24 +7,28 @@
                         <th>Telefone</th>
                         <th>Data de Nascimento</th>
                         <th>Endereço</th>
+                        <th>Bairro</th>
                         <th>Cidade</th>
                         <th>Estado</th>
                         <th>Está ativo?</th>
-                        <th>Ações</th>
+                        <th colspan="2">Ações</th>
                 </tr>
                 <tr *ngFor="let pessoa of listaPessoas">
                         <td>{{ pessoa.codigo }}</td>
                         <td>{{ pessoa.nome }}</td>
                         <td>{{ pessoa.telefone }}</td>
                         <td>{{ pessoa.dataNascimento | date:'dd/MM/yyyy' }}</td>
+                        <td>{{ pessoa.bairro}}</td>
                         <td>{{ pessoa.endereco }}</td>
                         <td>{{ pessoa.cidade }}</td>
                         <td>{{ pessoa.estado }}</td>
                         <td *ngIf="pessoa.isAtivo">Sim</td>
                         <td *ngIf="!pessoa.isAtivo">Não</td>
+                        <td><button (click)="editarPessoa(pessoa)">Editar</button></td>
                         <td><button (click)="removerPessoa(pessoa)">Excluir</button></td>
 
                 </tr>
         </table>
 
 </app-layout>
+<app-pessoa-manter [pessoa]="pessoa" (pessoaEnviar)="adicionarPessoa($event)"></app-pessoa-manter>
