--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -13,7 +13,7 @@
 <input type="number" [(ngModel)]="produto.quantidade">
 <br><label for="">Unidade de Medida:</label>
 <select [(ngModel)]="produto.unidadeMedida">
-    <option *ngFor="let produto of unidadeMedidas" [ngValue]="produto">{{ produto }}</option>
+    <option *ngFor="let unidade of unidadeMedidas" [ngValue]="unidade">{{ unidade }}</option>
 </select>
 <br>
 <button (click)="incluirProduto()">Incluir Produto</button>
